           libSBML NEWS -- History of user-visible changes

======================================================================
Current development
======================================================================

* New features

  - New validation rule 20518 from the specification has been implemented.

  - In order to facilitate support of the new Event semantics,
    both the new attributes on a Trigger object and the 
    new Priority object have been implemented.  The expected 
    manipulation functions set/set/isSet have been added.

  - The initDefaults functions initialise common default values for
    object attributes.  However, it was not assigning values to units.
    Considering the fact that L2 Compartments and Species have units
    associated with them by default; the initDefaults functions will
    now set units to litre for an L3 Compartment and substanceUnits
    to mole for an L3 Species.

  - An ASTNode of type AST_NAME_AVOGADRO is now also considered to
    be a constant ASTNode.
    
  - The function LocalParameter_hasRequiredAttributes was missing 
    from the C API. It has now been added.

  - [Tracker issue #2842277]
    There is a new util_free function that can be used to free any
    memory that is allocated within a libsbml function call. The
    SBML_formulaToString function, for example.  This new function
    is aimed at Windows users of the libraries within the windows 
    installers.  These are linked against the static MSVC runtime
    libraries and can cause memory leak issues.
    
* Bug fixes:

  - [Tracker issue #3073473]
    Annotations using the newer biomodels qualifiers were losing
    these annotations.  It turns out the code was recognising them
    in some places but not all.  This is fixed.  Thanks to Camille 
    Laibe for reporting this. 
    
  - Converting a model to L3 was not setting all the required
    attributes correctly.  This has been corrected.  Thanks to
    Chris Myers for reporting this.
